--- a/libs/mqtt-sparkplug/CMakeLists.txt
+++ b/libs/mqtt-sparkplug/CMakeLists.txt
@@ -14,7 +14,7 @@
 
  message(STATUS "Looking for sparkplug file")
 
- set(SPARK_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
+ set(SPARK_PATH "/opt/vcpkg/buildtrees/tfc-framework/x64-linux-clang-rel/_deps/sparkplug_proto-src/sparkplug_b/sparkplug_b.proto")
 
  message(STATUS "file path: ${SPARK_PATH}")
 
