--- a/libs/mqtt-sparkplug/CMakeLists.txt
+++ b/libs/mqtt-sparkplug/CMakeLists.txt
@@ -14,8 +14,11 @@
 
  message(STATUS "Looking for sparkplug file")
 
- set(SPARK_PATH "/opt/vcpkg/buildtrees/tfc-framework/x64-linux-clang-rel")
+ set(SPARK_PATH "/opt/vcpkg/buildtrees/tfc-framework/x64-linux-clang-rel/_deps")
  # set(SPARK_PATH "/opt/vcpkg/buildtrees/tfc-framework/x64-linux-clang-rel/_deps/sparkplug_proto-src/sparkplug_b/sparkplug_b.proto")
+
+ file(GLOB SPARKPLUG_FILES "${SPARK_PATH}/*")
+ message(STATUS "Sparkplug Files: ${SPARKPLUG_FILES}")
 
  message(STATUS "file path: ${SPARK_PATH}")
 
