--- a/libs/mqtt-sparkplug/CMakeLists.txt
+++ b/libs/mqtt-sparkplug/CMakeLists.txt
@@ -5,17 +5,17 @@ find_package(protobuf CONFIG REQUIRED)
 
 include(FetchContent)
 FetchContent_Declare(
-    sparkplug_proto
+    sparkplug_proto_content
     GIT_REPOSITORY https://github.com/eclipse/tahu.git
     GIT_TAG        v1.0.4
 )
-FetchContent_Populate(sparkplug_proto)
+FetchContent_MakeAvailable(sparkplug_proto_content)
 
-message(sparkplug_proto_SOURCE_DIR: ${sparkplug_proto_SOURCE_DIR})
+message(sparkplug_proto_content_SOURCE_DIR: ${sparkplug_proto_content_SOURCE_DIR})
 
 file(
   COPY
-    ${sparkplug_proto_SOURCE_DIR}/sparkplug_b/sparkplug_b.proto
+    ${sparkplug_proto_content_SOURCE_DIR}/sparkplug_b/sparkplug_b.proto
   DESTINATION
     ${CMAKE_CURRENT_SOURCE_DIR}/sparkplug_b/
 )
