--- a/libs/mqtt-sparkplug/CMakeLists.txt
+++ b/libs/mqtt-sparkplug/CMakeLists.txt
@@ -21,6 +21,7 @@ target_compile_options(sparkplug_proto
     -Wno-unsafe-buffer-usage
     -Wno-missing-prototypes
     -Wno-global-constructors
+    -Wno-used-but-marked-unused
 )
 endif()
 
