--- a/cockpit/IPC/package.json
+++ b/cockpit/IPC/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/core": "7.21.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@patternfly/react-core": "^4.276.8",
