--- a/libs/ipc/tests/CMakeLists.txt
+++ b/libs/ipc/tests/CMakeLists.txt
@@ -12,7 +12,10 @@ target_link_libraries(ipc_manager_test PRIVATE tfc::ipc tfc::confman Boost::ut g
 
 add_executable(ipc_test ipc_test.cpp)
 target_link_libraries(ipc_test PRIVATE Boost::ut tfc::ipc tfc::base)
-
 add_test(NAME ipc_test COMMAND ipc_test)
+
+add_executable(item_test item_test.cpp)
+target_link_libraries(item_test PRIVATE Boost::ut tfc::ipc tfc::base)
+add_test(NAME item_test COMMAND item_test)
 
 add_subdirectory(examples)
