--- a/exes/mqtt-broadcaster/CMakeLists.txt
+++ b/exes/mqtt-broadcaster/CMakeLists.txt
@@ -1,59 +1,38 @@
- add_executable(mqtt-broadcaster "src/main.cpp")
- add_executable(mqtt-broadcaster-unit-tests "tests/unit_tests.cpp")
+add_executable(mqtt-broadcaster
+  src/main.cpp
+)
 
- find_package(Boost REQUIRED COMPONENTS log program_options)
+find_package(Boost REQUIRED COMPONENTS log program_options)
+find_package(OpenSSL REQUIRED)
 
- find_package(OpenSSL REQUIRED)
+target_include_directories(mqtt-broadcaster
+  PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/inc
+)
 
- target_include_directories(mqtt-broadcaster
-         PUBLIC
-         ${CMAKE_CURRENT_SOURCE_DIR}/inc
-         )
+target_link_libraries(mqtt-broadcaster
+  PUBLIC
+    tfc::base
+    tfc::logger
+    tfc::stx
+    tfc::ipc
+    tfc::operation_mode
+    tfc::confman
+    Boost::boost
+    Boost::log
+    Boost::program_options
+    OpenSSL::SSL OpenSSL::Crypto
+    tfc::sparkplug::proto
+)
 
- target_link_libraries(mqtt-broadcaster
-         tfc::base
-         tfc::logger
-         tfc::stx
-         tfc::ipc
-         tfc::operation_mode
-         tfc::confman
-         Boost::boost
-         Boost::log
-         Boost::program_options
-         OpenSSL::SSL OpenSSL::Crypto
-         tfc::sparkplug::proto
-         )
+target_compile_definitions(mqtt-broadcaster
+  PUBLIC
+    ASYNC_MQTT_USE_TLS
+)
 
- target_compile_definitions(mqtt-broadcaster
-         PUBLIC
-         ASYNC_MQTT_USE_TLS
-         )
+target_compile_options(mqtt-broadcaster PRIVATE -Wno-exit-time-destructors)
 
- target_compile_options(mqtt-broadcaster PRIVATE -Wno-exit-time-destructors)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
 
- target_include_directories(mqtt-broadcaster-unit-tests
-         PUBLIC
-         ${CMAKE_CURRENT_SOURCE_DIR}/inc
-         ${CMAKE_CURRENT_SOURCE_DIR}/tests
-         )
-
- target_link_libraries(mqtt-broadcaster-unit-tests
-         tfc::base
-         tfc::logger
-         tfc::stx
-         tfc::ipc
-         tfc::operation_mode
-         tfc::confman
-         Boost::boost
-         Boost::log
-         Boost::program_options
-         OpenSSL::SSL OpenSSL::Crypto
-         tfc::sparkplug::proto
-         )
-
- target_compile_definitions(mqtt-broadcaster-unit-tests
-         PUBLIC
-         ASYNC_MQTT_USE_TLS
-         )
-
- target_compile_options(mqtt-broadcaster-unit-tests PRIVATE -g)
