--- a/libs/ipc/tests/CMakeLists.txt
+++ b/libs/ipc/tests/CMakeLists.txt
@@ -18,4 +18,8 @@ add_executable(item_test item_test.cpp)
 target_link_libraries(item_test PRIVATE Boost::ut tfc::ipc tfc::base)
 add_test(NAME item_test COMMAND item_test)
 
+add_executable(filter_test filter_test.cpp)
+target_link_libraries(filter_test PRIVATE Boost::ut tfc::ipc tfc::base)
+add_test(NAME filter_test COMMAND filter_test)
+
 add_subdirectory(examples)
