wip timer testing of filter

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (BUILD_TESTING)
+  add_subdirectory(testing)
+endif ()
+
 add_subdirectory(configure_options)
 add_subdirectory(dbus_util)
 add_subdirectory(stx)
