--- a/libs/ipc/tests/CMakeLists.txt
+++ b/libs/ipc/tests/CMakeLists.txt
@@ -3,10 +3,10 @@ find_package(glaze CONFIG REQUIRED)
 
 add_executable(ipc_manager_test ipc_manager_test.cpp)
 add_test(
-        NAME
-        ipc_manager_test
-        COMMAND
-        ipc_manager_test
+  NAME
+    ipc_manager_test
+  COMMAND
+    ipc_manager_test
 )
 target_link_libraries(ipc_manager_test PRIVATE tfc::ipc tfc::confman Boost::ut glaze::glaze)
 
@@ -19,7 +19,7 @@ target_link_libraries(item_test PRIVATE Boost::ut tfc::ipc tfc::base)
 add_test(NAME item_test COMMAND item_test)
 
 add_executable(filter_test filter_test.cpp)
-target_link_libraries(filter_test PRIVATE Boost::ut tfc::ipc tfc::base)
+target_link_libraries(filter_test PRIVATE Boost::ut tfc::ipc tfc::base tfc::testing)
 add_test(NAME filter_test COMMAND filter_test)
 
 add_subdirectory(examples)
