--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -8,6 +8,11 @@ on:
 
 env:
   CONFIGURATION_DIRECTORY: ${{ github.workspace }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  VCPKG_FEATURE_FLAGS: dependencygraph
+
+permissions:
+  contents: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
