--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(operations)
 add_subdirectory(tfcctl)
 add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
-add_subdirectory(mqtt-broadcaster)
+add_subdirectory(mqtt-bridge)
