--- a/cockpit/IPC/package.json
+++ b/cockpit/IPC/package.json
@@ -25,6 +25,7 @@
     "@ui-schema/ui-schema": "^0.4.5",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "hamburger-react": "^2.5.0",
     "immutable": "^4.3.0",
     "mathjs": "^11.8.2",
     "react": "^18.2.0",
