--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(ethercat)
 add_subdirectory(gpio)
-add_subdirectory(operation-mode)
+add_subdirectory(operations)
 add_subdirectory(tfcctl)
 add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
