--- a/exes/operations/CMakeLists.txt
+++ b/exes/operations/CMakeLists.txt
@@ -1,14 +1,14 @@
-project(operation_mode)
+project(operations)
 cmake_minimum_required(VERSION 3.21)
 
-add_executable(operation-mode
+add_executable(operations
   src/main.cpp
   src/app_operation_mode.cpp
   src/state_machine.cpp
 )
 
 find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
-target_include_directories(operation-mode
+target_include_directories(operations
   PUBLIC
     inc
     ${BEXT_SML_INCLUDE_DIRS}
@@ -16,7 +16,7 @@ target_include_directories(operation-mode
 
 find_package(Boost REQUIRED)
 find_package(unofficial-sdbusplus CONFIG REQUIRED)
-target_link_libraries(operation-mode
+target_link_libraries(operations
   PUBLIC
     tfc::base
     tfc::logger
