--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -33,5 +33,6 @@ jobs:
           inplace: True
       - uses: EndBug/add-and-commit@v9
         with:
-          default_author: user_info
           message: 'Committing clang-format changes'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
