--- a/libs/ipc/CMakeLists.txt
+++ b/libs/ipc/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.21)
 
 add_library(ipc
   src/ipc.cpp
+  src/dbus_server_iface_mock.cpp # todo make ipc_test target
 )
 add_library(tfc::ipc ALIAS ipc)
 
