Postfixes ipc enhanced (#158)
* change regex_match to regex_search, regex_match needs whole string match

* refining EL2xxx

* splitting impl of dbus_server_iface_mock to source file

* Split impl of EL2xxx to source file

* make tests for EL2xxx

* ethercat cleanup includes devices base

* split impl of el1xxx to source file

* tests for el1xxx

* expose full name from slots and signals

* Make template implementation in separate header, making it testable and exportable

* split ipc dbus client to its own header and source file

* extract common invocable concept

* move ipc tests

* move ipc examples

* use ipc signal mock for bechkoff tests

* remove unused names

--- a/libs/ipc/CMakeLists.txt
+++ b/libs/ipc/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.21)
 
 add_library(ipc
   src/ipc.cpp
+  src/dbus_server_iface_mock.cpp # todo make ipc_test target
+  src/dbus_client_iface.cpp
 )
 add_library(tfc::ipc ALIAS ipc)
 
@@ -36,7 +38,7 @@ target_link_libraries(ipc
 add_library_to_docs(tfc::ipc)
 
 if (BUILD_TESTING)
-  add_subdirectory(tests)
+  add_subdirectory(testing)
 endif ()
 
 include(tfc_install)
