--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -21,8 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: [debug, release]
-        compiler: [gcc, clang]
+        preset_postfixes: [ gcc-debug, gcc-release, clang-debug, clang-release, gcc-debug-dynamic, clang-debug-dynamic ]
+
     steps:
       - uses: actions/checkout@v3
       - name: start dbus
@@ -40,6 +40,6 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          configurePreset: 'ci-${{ matrix.compiler }}-${{matrix.build_type}}'
-          buildPreset: 'build-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
-          testPreset: 'test-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
+          configurePreset: 'ci-${{ matrix.preset_postfixes }}'
+          buildPreset: 'build-ci-${{ matrix.preset_postfixes }}'
+          testPreset: 'test-ci-${{ matrix.preset_postfixes }}'
