pull changes from sensor control branch

--- a/libs/confman/testing/examples/CMakeLists.txt
+++ b/libs/confman/testing/examples/CMakeLists.txt
@@ -1,16 +1,14 @@
-
-add_executable(confman-example-simple simple.cpp)
-
 find_package(mp-units CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 
-target_link_libraries(confman-example-simple PRIVATE tfc::confman mp-units::si fmt::fmt)
+add_executable(confman_example_simple simple.cpp)
+target_link_libraries(confman_example_simple PRIVATE tfc::confman mp-units::si fmt::fmt)
 
-add_executable(confman-example-nested nested.cpp)
-target_link_libraries(confman-example-nested PRIVATE tfc::confman mp-units::si fmt::fmt)
+add_executable(confman_example_nested nested.cpp)
+target_link_libraries(confman_example_nested PRIVATE tfc::confman mp-units::si fmt::fmt)
 
-add_executable(confman-example-array array.cpp)
-target_link_libraries(confman-example-array PRIVATE tfc::confman mp-units::si fmt::fmt)
+add_executable(confman_example_array array.cpp)
+target_link_libraries(confman_example_array PRIVATE tfc::confman mp-units::si fmt::fmt)
 
-add_executable(confman-example-variant variant.cpp)
-target_link_libraries(confman-example-variant PRIVATE tfc::confman mp-units::si fmt::fmt)
+add_executable(confman_example_variant variant.cpp)
+target_link_libraries(confman_example_variant PRIVATE tfc::confman mp-units::si fmt::fmt)
