--- a/libs/stx/CMakeLists.txt
+++ b/libs/stx/CMakeLists.txt
@@ -13,6 +13,7 @@ target_include_directories(stx
 find_package(date CONFIG REQUIRED)
 find_package(mp-units CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
+find_package(stduuid CONFIG REQUIRED)
 
 target_link_libraries(stx
   INTERFACE
@@ -20,6 +21,7 @@ target_link_libraries(stx
     glaze::glaze
     mp-units::si
     mp-units::core
+    stduuid
 )
 
 include(tfc_install)
