use pcg random generator

--- a/libs/ipc/CMakeLists.txt
+++ b/libs/ipc/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(ZeroMQ REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
 find_package(stduuid CONFIG REQUIRED)
+find_path(PCG_INCLUDE_DIRS "pcg_random.hpp")
 
 target_link_libraries(ipc
   PUBLIC
@@ -37,6 +38,8 @@ target_link_libraries(ipc
     stduuid
     $<IF:$<BOOL:${ZeroMQ_LIBRARY}>,${ZeroMQ_LIBRARY},${ZeroMQ_STATIC_LIBRARY}>
 )
+
+target_include_directories(ipc PRIVATE ${PCG_INCLUDE_DIRS})
 
 add_library_to_docs(tfc::ipc)
 
