Added a button exe for transforming a boolean signal into events

--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(ethercat)
+add_subdirectory(button)
 add_subdirectory(gpio)
 add_subdirectory(operations)
 add_subdirectory(tfcctl)
