--- a/exes/button/CMakeLists.txt
+++ b/exes/button/CMakeLists.txt
@@ -1,13 +1,8 @@
 add_executable(button src/main.cpp)
 
-find_path(AZMQ_INCLUDE_DIRS "azmq/actor.hpp")
+find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
+target_include_directories(button PRIVATE ${BEXT_SML_INCLUDE_DIRS})
 
-target_include_directories(button
-  PUBLIC
-    ${AZMQ_INCLUDE_DIRS}
-)
-
-find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(glaze CONFIG REQUIRED)
 
 target_link_libraries(button
@@ -15,9 +10,6 @@ target_link_libraries(button
     tfc::ipc
     tfc::base
     tfc::logger
-    tfc::confman
-    Boost::program_options
-    glaze::glaze
 )
 
 include(GNUInstallDirs)
