--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(ipc)
 add_subdirectory(soem_interface)
 add_subdirectory(operation_mode)
 add_subdirectory(mqtt-sparkplug)
+add_subdirectory(snitch)
 
 add_library(tfc INTERFACE)
 add_library(tfc::tfc ALIAS tfc)
