Time point not loosing precision in json conversion (#163)
* iso8601 not truncating time_point

* using uuids in item generation

--- a/libs/ipc/CMakeLists.txt
+++ b/libs/ipc/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(ipc
   src/ipc.cpp
   src/dbus_server_iface_mock.cpp # todo make ipc_test target
   src/dbus_client_iface.cpp
+  src/item.cpp
 )
 add_library(tfc::ipc ALIAS ipc)
 
@@ -21,6 +22,8 @@ find_package(Boost REQUIRED)
 find_package(ZeroMQ REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
+find_package(stduuid CONFIG REQUIRED)
+find_path(PCG_INCLUDE_DIRS "pcg_random.hpp")
 
 target_link_libraries(ipc
   PUBLIC
@@ -32,8 +35,11 @@ target_link_libraries(ipc
     Boost::boost
     fmt::fmt
     glaze::glaze
+    stduuid
     $<IF:$<BOOL:${ZeroMQ_LIBRARY}>,${ZeroMQ_LIBRARY},${ZeroMQ_STATIC_LIBRARY}>
 )
+
+target_include_directories(ipc PRIVATE ${PCG_INCLUDE_DIRS})
 
 add_library_to_docs(tfc::ipc)
 
